--- a/CódigoFuente/BitacorasProduccion/Views/IT_notificaciones_actividad/Index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_notificaciones_actividad/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<Portal_2_0.Models.IT_notificaciones_actividad>
 @{
-    ViewBag.Title = "Listado de Notificaciones";
+    ViewBag.Title = "Calendario de eventos";
     ViewBag.PrimerNivel = "sistemas";
     ViewBag.SegundoNivel = "it_notificaciones";
     ViewBag.ControllerName = ViewContext.RouteData.Values["controller"];
@@ -14,9 +14,11 @@
     <!-- DataTables -->
     @Styles.Render("~/Content/dataTables_css")
 
-    <!-- SweetAlert2 -->
-    <link href="@Url.Content("~/Content/vendors/sweetalert2-theme-bootstrap-4/bootstrap-4.min.css")" rel="stylesheet">
-    <style>    
+
+    <style>
+        .fc-button-primary {
+            background-color: #009ff5 !important;
+        }
 
         #calendar {
             max-width: 1200px;
@@ -31,8 +33,6 @@
     <input type="hidden" value="@mensajeAlerta.Mensaje" id="mensajeAlert" />
     <input type="hidden" value="@mensajeAlerta.getTipoMensaje()" id="mensajeAlertTipo" />
 }
-
-
 
 <div class="right_col" role="main">
     <div class="">
@@ -58,70 +58,9 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <div class="card-box table-responsive">
-                                    <div class="form-group">
-                                        <a href="@Url.Action( "Create", ViewBag.ControllerName)" class="btn btn-success">
-                                            <i class="fa fa-plus-square"></i>
-                                            Crear nuevo
-                                        </a>
-                                    </div>
-                                    <div class="ln_solid"></div>
+                                  
                                     <div id="calendar"></div>
 
-                                    @*<table id="datatable-responsive" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
-                                            <thead>
-                                                <tr>
-                                                    <th>
-                                                        @Html.DisplayNameFor(model => model.descripcion)
-                                                    </th>
-                                                    <th>
-                                                        @Html.DisplayNameFor(model => model.periodo)
-                                                    </th>
-                                                    <th>
-                                                        @Html.DisplayNameFor(model => model.tipo_periodo)
-                                                    </th>
-                                                    <th>
-                                                        @Html.DisplayNameFor(model => model.es_recurrente)
-                                                    </th>
-                                                    <th>
-                                                        @Html.DisplayNameFor(model => model.mensaje)
-                                                    </th>
-                                                    <th>
-                                                        @Html.DisplayNameFor(model => model.asunto)
-                                                    </th>
-                                                    <th></th>
-                                                </tr>
-                                            </thead>
-                                            <tbody>
-                                                @foreach (var item in Model)
-                                                {
-                                                    <tr>
-                                                        <td>
-                                                            @Html.DisplayFor(modelItem => item.descripcion)
-                                                        </td>
-                                                        <td>
-                                                            @Html.DisplayFor(modelItem => item.periodo)
-                                                        </td>
-                                                        <td>
-                                                            @Html.DisplayFor(modelItem => item.tipo_periodo)
-                                                        </td>
-                                                        <td>
-                                                            @Html.DisplayFor(modelItem => item.es_recurrente)
-                                                        </td>
-                                                        <td>
-                                                            @Html.DisplayFor(modelItem => item.mensaje)
-                                                        </td>
-                                                        <td>
-                                                            @Html.DisplayFor(modelItem => item.asunto)
-                                                        </td>
-                                                        <td>
-                                                            @Html.ActionLink("Edit", "Edit", new { id = item.id }) |
-                                                            @Html.ActionLink("Details", "Details", new { id = item.id }) |
-                                                            @Html.ActionLink("Delete", "Delete", new { id = item.id })
-                                                        </td>
-                                                    </tr>
-                                                }
-                                            </tbody>
-                                        </table>*@
                                 </div>
                             </div>
                         </div>
@@ -133,93 +72,171 @@
 </div>
 @section scripts
 {
-    <!-- SweetAlert2 -->
-    @Scripts.Render(Url.Content("~/Content/vendors/sweetalert2/sweetalert2.min.js"))
-    @Scripts.Render(Url.Content("~/Scripts/AlertasSweetAlert.js"))
-
     @Scripts.Render("~/bundles/dataTables_js")
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/6.1.5/index.global.js" integrity="sha512-eL+VbrJmYJxsJaQlxkEIfv6sBNGIp7jgAfTGqZLeJnOE1oY+404ukyDPYKxIb/p4d3ZoSI3qmYK9oyF7Is30lg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
+    <!-- SweetAlert2 -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert2/11.7.3/sweetalert2.all.min.js" integrity="sha512-/iBgV43zPirSC0tue+PT/1VHGs7En24twBmT+sVMgn9PTaOpKfbgIyL5YsGKlbAIxcwz9S8W/YEnYjpIYj2Axw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    @Scripts.Render(Url.Content("~/Scripts/AlertasSweetAlertColored.js"))
+    <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.5/index.global.min.js'></script>
+    <script src="~/Content/vendors/fullcalendar_6.1.5/es.global.min.js"></script>
     <script>
+        //variables globales
 
+        var calendar;
         document.addEventListener('DOMContentLoaded', function () {
-            var calendarEl = document.getElementById('calendar');
 
-            var calendar = new FullCalendar.Calendar(calendarEl, {
-                initialDate: '2023-01-12',
-                editable: true,
-                selectable: true,
+
+            IniciaCalendar();
+            clicMenu(1);
+        });
+
+        function IniciaCalendar() {
+            var calendarEl = document.getElementById('calendar');
+            calendar = new FullCalendar.Calendar(calendarEl, {
+                themeSystem: 'bootstrap',
+                initialView: 'dayGridMonth',
+                locale: 'es',
+                firstDay: 0,
                 businessHours: true,
                 dayMaxEvents: true, // allow "more" link when too many events
+                headerToolbar: {
+                    left: 'prevYear,prev,next,nextYear today',
+                    center: 'title',
+                    right: 'addEventButton dayGridMonth,dayGridWeek,dayGridDay'
+                },
+                customButtons: {
+                    addEventButton: {
+                        text: 'Agregar Evento',
+                        click: function () {
+                            window.location.replace('/@ViewBag.ControllerName/Create/');
+                           // agregaEventoSweetAlert();
+                        }
+                    }
+                },
                 events: [
                     {
                         title: 'All Day Event',
-                        start: '2023-01-01'
+                        start: '2023-04-01'
                     },
                     {
                         title: 'Long Event',
-                        start: '2023-01-07',
-                        end: '2023-01-10'
+                        start: '2023-04-07',
+                        end: '2023-04-10'
                     },
                     {
                         groupId: 999,
                         title: 'Repeating Event',
-                        start: '2023-01-09T16:00:00'
+                        start: '2023-04-09T16:00:00'
                     },
                     {
                         groupId: 999,
                         title: 'Repeating Event',
-                        start: '2023-01-16T16:00:00'
+                        start: '2023-04-16T16:00:00'
                     },
                     {
                         title: 'Conference',
-                        start: '2023-01-11',
-                        end: '2023-01-13'
+                        start: '2023-04-11',
+                        end: '2023-04-13',
+                        color: 'yellow',   // an option!
+                        textColor: 'black' // an option!
                     },
                     {
                         title: 'Meeting',
-                        start: '2023-01-12T10:30:00',
-                        end: '2023-01-12T12:30:00'
+                        start: '2023-04-12T10:30:00',
+                        end: '2023-04-12T12:30:00'
                     },
                     {
                         title: 'Lunch',
-                        start: '2023-01-12T12:00:00'
+                        start: '2023-04-12T12:00:00'
                     },
                     {
                         title: 'Meeting',
-                        start: '2023-01-12T14:30:00'
+                        start: '2023-04-12T14:30:00'
                     },
                     {
                         title: 'Happy Hour',
-                        start: '2023-01-12T17:30:00'
+                        start: '2023-04-12T17:30:00'
                     },
                     {
                         title: 'Dinner',
-                        start: '2023-01-12T20:00:00'
+                        start: '2023-04-12T20:00:00'
                     },
                     {
                         title: 'Birthday Party',
-                        start: '2023-01-13T07:00:00'
+                        start: '2023-04-13T07:00:00'
                     },
                     {
                         title: 'Click for Google',
                         url: 'http://google.com/',
-                        start: '2023-01-28'
+                        start: '2023-04-28'
                     }
                 ]
             });
 
             calendar.render();
+        }
+
+        function agregaEventoSweetAlert() {
+
+            Swal.fire({
+                title: 'Login Form',
+                html: `
+                        <div>
+                            <label for="fecha" class="col-md-3 col-sm-3">Fecha:</label>
+                            <div class="col-md-9 col-sm-9">
+                                <input type="date" id="fecha" class="swal2-input" placeholder="">
+                            </div>
+                        </div>
+                        <div>
+                            <label for="titulo" class="col-md-3 col-sm-3">Titulo:</label>
+                            <div class="col-md-9 col-sm-9">
+                                 <input type="text" id="titulo" class="swal2-input" placeholder="Título">
+                            </div>
+                        </div>
+                          <div >
+                            <label for="titulo" class="col-md-3 col-sm-3">Descripcion:</label>
+                            <div class="col-md-9 col-sm-9">
+                                 <input type="text" id="descripcion" class="swal2-input" placeholder="Descripcion">
+                            </div>
+                        </div>
+
+                    `,
+                customClass: 'swal-wide',
+                confirmButtonText: 'Agregar',
+                focusConfirm: false,
+                preConfirm: () => {
+                    const fecha = Swal.getPopup().querySelector('#fecha').value
+                    const titulo = Swal.getPopup().querySelector('#titulo').value
+                    const descripcion = Swal.getPopup().querySelector('#descripcion').value
+                    if (!fecha || !titulo || !descripcion) {
+                        Swal.showValidationMessage(`Complete los datos`)
+                    }
+                    return { fecha: fecha, titulo: titulo, descripcion: descripcion }
+                }
+            }).then((result) => {
+                calendar.addEvent({
+                    title: result.value.titulo,
+                    start: result.value.fecha,
+                    allDay: true
+                });
+          //      Swal.fire(`
+          //  Fecha: ${result.value.fecha}
+          //  Titulo: ${result.value.titulo}
+          //  Descripcion: ${result.value.descripcion}
+          //`.trim())
+            })
+
+
+        }
+
+        function actualizarSizeCalendario() {
+            calendar.updateSize();
+        }
+
+        $("#menu_toggle").click(function () {
+            setTimeout(actualizarSizeCalendario), 1000;
         });
 
     </script>
 
-
-    <script>
-
-        window.onload = function () {
-            clicMenu(1);
-        }
-    </script>
 
 }
