--- a/CódigoFuente/BitacorasProduccion/Views/ResponsableBudget/Centros.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/ResponsableBudget/Centros.cshtml
@@ -31,10 +31,10 @@
 <div class="right_col" role="main">
     <div class="">
         @*<div class="page-title">
-            <div class="title_left">
-                <h3>@ViewBag.ControllerName</h3>
-            </div>
-        </div>*@
+                <div class="title_left">
+                    <h3>@ViewBag.ControllerName</h3>
+                </div>
+            </div>*@
 
         <div class="clearfix"></div>
 
@@ -58,11 +58,11 @@
                                 <div class="card-box table-responsive">
                                     <div class="form-group">
                                         @*<a href="@Url.Action("Create", ViewBag.ControllerName)" class="btn btn-success">
-                                            <i class="fa fa-plus-square"></i>
-                                            Crear nuevo
-                                        </a>*@
+                                                <i class="fa fa-plus-square"></i>
+                                                Crear nuevo
+                                            </a>*@
                                     </div>
-                                    <table id="datatable1" class="table table-striped table-bordered nowrap" cellspacing="0" width="100%">
+                                    <table id="datatable1" class="table table-striped table-bordered " cellspacing="0" width="100%">
                                         <thead>
                                             <tr>
                                                 <th>
@@ -90,43 +90,49 @@
 
                                             @foreach (var item in Model)
                                             {
-                                            <tr>
-                                                <td>
-                                                    @fila
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.num_centro_costo)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.descripcion)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.budget_departamentos.descripcion)
-                                                </td>
+                                                <tr>
+                                                    <td>
+                                                        @fila
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.num_centro_costo)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.descripcion)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.budget_departamentos.descripcion)
+                                                    </td>
 
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.budget_departamentos.budget_plantas.descripcion)
-                                                </td>
-                                                <td>
-                                                    @{
-                                                        String responsables = (string.Join("/", item.budget_responsables.Select(x => x.empleados.ConcatNombre).ToArray()));
-                                                    }
-                                                    <span>@responsables</span>
-                                                </td>
-                                                <td>
-                                                    @{ DateTime fechaActual = DateTime.Now;}
-                                                    <a href="@Url.Action("DetailsCentro", ViewBag.ControllerName, new { id = item.id})" class="btn btn-info" title="Details">
-                                                        <i class="fa fa-info-circle"></i> INFO
-                                                    </a>
-                                                    <a href="@Url.Action("EditCentroPresente", ViewBag.ControllerName, new { id = item.id})" class="btn btn-success " title="Edit">
-                                                        <i class="fa-regular fa-pen-to-square"></i> FY @(Bitacoras.Util.BgPlantillaUtil.DescripcionAnio(fechaActual))
-                                                    </a>
-                                                    <a href="@Url.Action("EditCentroProximo", ViewBag.ControllerName, new { id = item.id})" class="btn btn-success " style="background-color: #4d2bcc" title="Edit">
-                                                        <i class="fa-regular fa-pen-to-square"></i> FY @(Bitacoras.Util.BgPlantillaUtil.DescripcionAnio(fechaActual.AddYears(1)))
-                                                    </a>
-                                                </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.budget_departamentos.budget_plantas.descripcion)
+                                                    </td>
+                                                    <td wrap>
+                                                        @{
+                                                            String responsables = (string.Join("/", item.budget_responsables.Select(x => x.empleados.ConcatNombre).ToArray()));
+                                                        }
+                                                        <span>@responsables</span>
+                                                    </td>
+                                                    <td>
+                                                        @{ DateTime fechaActual = DateTime.Now;}
+                                                        <a href="@Url.Action("DetailsCentro", ViewBag.ControllerName, new { id = item.id})" class="btn btn-info" title="Details">
+                                                            <i class="fa fa-info-circle"></i> INFO
+                                                        </a>
+                                                        <a href="@Url.Action("EditCentroPresente", ViewBag.ControllerName, new { id = item.id})" class="btn btn-success " title="Edit">
+                                                            <i class="fa-regular fa-pen-to-square"></i> FY @(Bitacoras.Util.BgPlantillaUtil.DescripcionAnio(fechaActual))
+                                                        </a>
+                                                        <a href="@Url.Action("EditCentroProximo", ViewBag.ControllerName, new { id = item.id})" class="btn btn-success " style="background-color: #4d2bcc" title="Edit">
+                                                            <i class="fa-regular fa-pen-to-square"></i> FY @(Bitacoras.Util.BgPlantillaUtil.DescripcionAnio(fechaActual.AddYears(1)))
+                                                        </a>
+                                                        <a href="@Url.Action("Exportar", "BudgetControlling", new
+                                                                {
+                                                                    id_centro_costo = item.id
+                                                                })" class="btn btn-success" title="Reporte" style="background-color: #1D6F42">
+                                                            <i class="fa-solid fa-file-excel"></i> Export
+                                                        </a>
+                                                    </td>
 
-                                            </tr>
+                                                </tr>
 
                                                 fila++;
                                             }
@@ -158,9 +164,9 @@
             "searching": true,
             "scrollX": true,
             "pageLength": 20,
-            "lengthMenu": [5,10, 20, 50],
+            "lengthMenu": [5, 10, 20, 50],
             "info": true,
-           
+
         });
 
         //agranda el tamaño de la barra
